--- a/Software/app/build.gradle
+++ b/Software/app/build.gradle
@@ -47,4 +47,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
+
+    //AnyChart
+    implementation 'com.github.AnyChart:AnyChart-Android:0.0.3'
 }
